--- a/datatable.html
+++ b/datatable.html
@@ -10,7 +10,10 @@
         </style>
 
         <table>
-            <caption>The population of different races in Las Vegas</caption>
+            <caption>The population of different races in Nevada</caption>
+            <tr>
+                <td colspan="4">Races in Las Vegas</td>
+            </tr>
             <tr>
                 <th>Las Vegas Adults</th>
                 <th>Adults%</th>
